--- a/src/Play.Identity.Service/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Play.Identity.Service/Pages/Shared/_LoginPartial.cshtml
@@ -21,14 +21,18 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark"
-               id="register"
-               asp-area="Identity"
-               asp-page="/Account/Register"
-               asp-route-returnUrl="@Model.ReturnUrl">Register</a>
+            <a class="nav-link text-dark" 
+            id="register" 
+            asp-area="Identity" 
+            asp-page="/Account/Register"
+            asp-route-returnUrl="@Model.ReturnUrl">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Model.ReturnUrl">Login</a>
+            <a class="nav-link text-dark" 
+            id="login" 
+            asp-area="Identity" 
+            asp-page="/Account/Login"
+            asp-route-returnUrl="@Model.ReturnUrl">Login</a>
         </li>
     }
 </ul>
